--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
+    "bigint-conversion": "^2.1.12",
+    "bigint-crypto-utils": "^3.0.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -22,4 +24,6 @@
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   }
+  
 }
+
