--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "got": "^11.8.0",
+    "object-sha": "^2.0.5",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
