--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "got": "^11.8.0",
     "object-sha": "^2.0.5",
     "paillier-bigint": "^3.1.2",
+    "shamirs-secret-sharing": "^1.0.1",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
